<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_borrar"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always"

        />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always"

        />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_agregar"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always"

        />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="compartir"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="always"

        />



</menu>